--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <h1>Calculator</h1>
+    <div class="container">
+        <div class="calculator">
+            <div class="display"></div>
+            <button class="btn">AC</button>
+            <button class="btn">DEL</button>
+            <button class="btn">%</button>
+            <button class="btn">/</button> 
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">x</button>            
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">+</button> 
+            <button class="btn">7</button>
+            <button class="btn">8</button>  
+            <button class="btn">9</button>
+            <button class="btn">-</button>
+            <button class="btn">0</button>
+            <button class="btn">.</button>
+            <button class="btneq">=</button>
+        </div>
+    </div>
     
 </body>
 </html>
