Now buttons will display

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="calculator">
             <div class="display"></div>
-            <button class="btn">AC</button>
-            <button class="btn">DEL</button>
+            <button class="btn btnc">AC</button>
+            <button class="btn btnd">DEL</button>
             <button class="btn">%</button>
             <button class="btn">/</button> 
             <button class="btn">1</button>
@@ -29,9 +29,9 @@
             <button class="btn">-</button>
             <button class="btn">0</button>
             <button class="btn">.</button>
-            <button class="btneq">=</button>
+            <button class="btn btneq">=</button>
         </div>
     </div>
-    
+    <script src="./calculator.js"></script>
 </body>
 </html>
