--- a/calculator/index.html
+++ b/calculator/index.html
@@ -18,7 +18,7 @@
             <button class="btn">1</button>
             <button class="btn">2</button>
             <button class="btn">3</button>
-            <button class="btn">x</button>            
+            <button class="btn" data-value="*">x</button>            
             <button class="btn">4</button>
             <button class="btn">5</button>
             <button class="btn">6</button>
