--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,7 +13,7 @@
             <div class="display"></div>
             <button class="btn btnc">AC</button>
             <button class="btn btnd">DEL</button>
-            <button class="btn">%</button>
+            <button class="btn btnp">%</button>
             <button class="btn">/</button> 
             <button class="btn">1</button>
             <button class="btn">2</button>
