black background appears behind Odin logo and above background image

--- a/form/index.html
+++ b/form/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts.css"
 </head>
 <body>
-    
+    <div class="left">
+        <div class="logo">
+            <img src="./assets/img/odin-lined.png" alt="Odin Project Logo">
+            <h1>ODIN</h1>
+        </div>
+        <div class="background"></div>
+        <img src="./assets/img/leaves.jpg"  alt="leaves">
+        <div class="credits">
+            Photo by <a href="https://unsplash.com/@haliewest" target="_blank">Halie West</a> on <a href="https://unsplash.com/" target="_blank">Unsplash </a>
+        </div>
+        
+    </div>
 </body>
 </html>
