--- a/form/index.html
+++ b/form/index.html
@@ -6,20 +6,24 @@
     <title>Form</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="fonts.css"
+    <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
-    <div class="left">
-        <div class="logo">
-            <img src="./assets/img/odin-lined.png" alt="Odin Project Logo">
-            <h1>ODIN</h1>
+    <div class="container">
+        <div class="left">
+            <div class="logo">
+                <img src="./assets/img/odin-lined.png" alt="Odin Project Logo">
+                <h1>ODIN</h1>
+            </div>
+            <div class="background"></div>
+            <img src="./assets/img/leaves.jpg"  alt="leaves">
+            <div class="credits">
+                Photo by <a href="https://unsplash.com/@haliewest" target="_blank">Halie West</a> on <a href="https://unsplash.com/" target="_blank">Unsplash </a>
+            </div>    
         </div>
-        <div class="background"></div>
-        <img src="./assets/img/leaves.jpg"  alt="leaves">
-        <div class="credits">
-            Photo by <a href="https://unsplash.com/@haliewest" target="_blank">Halie West</a> on <a href="https://unsplash.com/" target="_blank">Unsplash </a>
+        <div class="right">
+            <div class="disclaimer">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started </div>
         </div>
-        
     </div>
 </body>
 </html>
