Addded some text element on the right white space

--- a/form/index.html
+++ b/form/index.html
@@ -23,6 +23,11 @@
         </div>
         <div class="right">
             <div class="disclaimer">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started </div>
+            <div class="text">You <em>know</em> you want to.</div>
+            <div class="background-white">
+                <div>Let's do this</div>
+            </div>
+            
         </div>
     </div>
 </body>
