Button added and undertext added and styled

--- a/form/index.html
+++ b/form/index.html
@@ -25,9 +25,10 @@
             <div class="disclaimer">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started </div>
             <div class="text">You <em>know</em> you want to.</div>
             <div class="background-white">
-                <div>Let's do this</div>
+                <div>Let's do this!</div>
             </div>
-            
+            <button class="btn">Create Account</button>
+            <div class="under-text">Already have an account?<strong> Log in</strong></div>
         </div>
     </div>
 </body>
