--- a/form/index.html
+++ b/form/index.html
@@ -26,6 +26,32 @@
             <div class="text">You <em>know</em> you want to.</div>
             <div class="background-white">
                 <div>Let's do this!</div>
+                <form class="form" action="#" method="post">
+                    <div class="input-container">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first-name" placeholder="Enter your first name" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name" placeholder="Enter your last name" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="tel" id="phone-number" name="phone-number" placeholder="Enter your phone number" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="confirm-password">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" required>
+                    </div>
+                </form>
             </div>
             <button class="btn">Create Account</button>
             <div class="under-text">Already have an account?<strong> Log in</strong></div>
