Add dashboard navigation and content sections with icons and trending/announcement blocks

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,6 +8,75 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <form class="search">
+                <img src="./assets/imgs/magnify.svg" alt="Search" height="30px" width="30px">
+                <input type="text" placeholder="search...">
+            </form>
+            <img src="./assets/imgs/bell-ring-outline.svg" alt="Notifications" height="30px" width="30px" class="notification-icon">
+            <img src="./assets/imgs/binit.jpg" alt="Profile" height="50px" width="50px" class="profile-icon">
+            <p>Binit Gupta</p>
+        </div>
+        <div class="nav">
+            <img src="./assets/imgs/binit.jpg" alt="Profile" height="70px" width="70px" class="profile-icon">
+            <p>Hi there,
+                <br>Binit Gupta (@binit)</p>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
+        <div class="dashboard">
+            <h2>Dashboard</h2>
+                <ul>
+                    <li><img src="./assets/imgs/home.svg" alt="Home" width="24" height="24"> Home</li>
+                    <li><img src="./assets/imgs/account.svg" alt="Profile" width="24" height="24"> Profile</li>
+                    <li><img src="./assets/imgs/message-reply.svg" alt="Messages" width="24" height="24"> Messages</li>
+                    <li><img src="./assets/imgs/history.svg" alt="History" width="24" height="24"> History</li>
+                    <li><img src="./assets/imgs/calendar-check.svg" alt="Task" width="24" height="24"> Task</li>
+                    <li><img src="./assets/imgs/account-group-outline.svg" alt="Communities" width="24" height="24"> Communities</li>
+                    <li><img src="./assets/imgs/cog.svg" alt="Settings" width="24" height="24"> Settings</li>
+                    <li><img src="./assets/imgs/tooltip-question.svg" alt="Support" width="24" height="24"> Support</li>
+                    <li><img src="./assets/imgs/security.svg" alt="Privacy" width="24" height="24"> Privacy</li>
+                </ul>
+        </div>
+        <div class="announcement">
+            <h1>Announcements</h1>
+            <div class="announcement-item">
+                <h2>Site Management</h2>
+                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue….</p>
+            </div>
+            <div class="announcement-item">
+                <h2>Community share day</h2>
+                <p>Curabitur in enim at quam facilisis eleifend. Sed euismod, nisi vel consectetur interdum, nisl nisi….</p>
+            </div>
+            <div class="announcement-item">
+                <h2>Updated Privacy Policy</h2>
+                <p>Phasellus in ligula at enim facilisis eleifend. Sed euismod, nisi vel consectetur interdum, nisl nisi….</p>
+            </div>
+        </div>
+        <div class="trending">
+            <h1>Trending</h1>
+            <div class="trending-item">
+                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 1">
+                <p>@binit</p>
+                <p>World Peace Builder</p>
+            </div>
+            <div class="trending-item">
+                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 2">
+                <p>@binit</p>
+                <p>World Peace Builder</p>
+            </div>
+            <div class="trending-item">
+                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 3">
+                <p>@binit</p>
+                <p>World Peace Builder</p>
+            </div>
+            <div class="trending-item">
+                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 3">
+                <p>@binit</p>
+                <p>World Peace Builder</p>
+            </div>
+    </div>
 </body>
 </html>
