--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -5,26 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container">
+        
         <div class="header">
             <form class="search">
-                <img src="./assets/imgs/magnify.svg" alt="Search" height="30px" width="30px">
-                <input type="text" placeholder="search...">
+                <img src="./assets/imgs/magnify.svg" alt="Search" height="40px" width="40px">
+                <input type="text" placeholder="search..." class="mag">
             </form>
-            <img src="./assets/imgs/bell-ring-outline.svg" alt="Notifications" height="30px" width="30px" class="notification-icon">
-            <img src="./assets/imgs/binit.jpg" alt="Profile" height="50px" width="50px" class="profile-icon">
-            <p>Binit Gupta</p>
+            <div class="user">
+                <img src="./assets/imgs/bell-ring-outline.svg" alt="Notifications" height="40px" width="40px" class="notification-icon">
+                <img src="./assets/imgs/binit.jpg" alt="Profile" height="40px" width="40px" class="profile-icon">
+                <p>Binit Gupta</p>
+            </div>
+            
         </div>
         <div class="nav">
-            <img src="./assets/imgs/binit.jpg" alt="Profile" height="70px" width="70px" class="profile-icon">
-            <p>Hi there,
-                <br>Binit Gupta (@binit)</p>
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
+            <div class="right">
+                <img src="./assets/imgs/binit.jpg" alt="Profile" height="70px" width="70px" class="profile-icon">
+                <p>Hi there,
+                    <br>Binit Gupta (@binit)</p>
+            </div>
+            <div class="left">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
         <div class="dashboard">
             <h2>Dashboard</h2>
