Grid fixes in header

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
     <div class="container">
-        
         <div class="header">
-            <form class="search">
-                <img src="./assets/imgs/magnify.svg" alt="Search" height="40px" width="40px">
-                <input type="text" placeholder="search..." class="mag">
-            </form>
-            <div class="user">
-                <img src="./assets/imgs/bell-ring-outline.svg" alt="Notifications" height="40px" width="40px" class="notification-icon">
-                <img src="./assets/imgs/binit.jpg" alt="Profile" height="40px" width="40px" class="profile-icon">
-                <p>Binit Gupta</p>
+            <div class="top">
+                <form class="search">
+                    <img src="./assets/imgs/magnify.svg" alt="Search" height="40px" width="40px">
+                    <input type="text" placeholder="search..." class="mag">
+                </form>
+                <div class="user">
+                    <img src="./assets/imgs/bell-ring-outline.svg" alt="Notifications" height="40px" width="40px" class="notification-icon">
+                    <img src="./assets/imgs/binit.jpg" alt="Profile" height="40px" width="40px" class="profile-icon">
+                    <p>Binit Gupta</p>
+                </div>
             </div>
-            
-        </div>
-        <div class="nav">
-            <div class="right">
-                <img src="./assets/imgs/binit.jpg" alt="Profile" height="70px" width="70px" class="profile-icon">
-                <p>Hi there,
-                    <br>Binit Gupta (@binit)</p>
+            <div class="bottom">
+                <div class="right">
+                    <img src="./assets/imgs/binit.jpg" alt="Profile" height="70px" width="70px" class="profile-icon">
+                    <p>Hi there,
+                        <br>Binit Gupta (@binit)</p>
+                </div>
+                <div class="left">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
-            <div class="left">
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
-            </div>
-        </div>
+        </div>    
         <div class="dashboard">
             <h2>Dashboard</h2>
                 <ul>
