--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -17,15 +17,15 @@
                 </form>
                 <div class="user">
                     <img src="./assets/imgs/bell-ring-outline.svg" alt="Notifications" height="40px" width="40px" class="notification-icon">
-                    <img src="./assets/imgs/binit.jpg" alt="Profile" height="50px" width="50px" class="profile-icon">
+                    <img src="./assets/imgs/binit.jpg" alt="Profile" height="60px" width="60px" class="profile-icon">
                     <p>Binit Gupta</p>
                 </div>
             </div>
             <div class="bottom">
                 <div class="left">
-                    <img src="./assets/imgs/binit.jpg" alt="Profile" height="70px" width="70px" class="profile-icon">
-                    <p>Hi there,
-                        <br>Binit Gupta (@binit)</p>
+                    <img src="./assets/imgs/binit.jpg" alt="Profile" height="80px" width="80px" class="profile-icon">
+                    <p><strong>Hi there,</strong>
+                        <br><span>Binit Gupta (@binit)</span></p>
                 </div>
                 <div class="right">
                     <button>New</button>
