--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -48,43 +48,73 @@
                     <li><img src="./assets/imgs/security.svg" alt="Privacy" width="24" height="24"> Privacy</li>
                 </ul>
         </div>
-        <div class="announcement">
-            <h1>Announcements</h1>
-            <div class="announcement-item">
-                <h2>Site Management</h2>
-                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue….</p>
+        <div class="main">
+            <div class="cards">
+                <h1>Your Projects</h1>
+                <div class="card">
+                    <h2>Super Cool Project</h2>
+                    <p>Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi...</p>
+                </div>
+                <div class="card">
+                    <h2>Less Cool Project</h2>
+                    <p>Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi...</p>
+                </div>
+                <div class="card">
+                    <h2>Impossible App</h2>
+                    <p>Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi...</p>
+                </div>
+                <div class="card">
+                    <h2>Easy Peasy App</h2>
+                    <p>Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi...</p>
+                </div>
+                <div class="card">
+                    <h2>Ad Blocker</h2>
+                    <p>Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi...</p>
+                </div>
+                <div class="card">
+                    <h2>Money Maker</h2>
+                    <p>Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi...</p>
+                </div>
             </div>
-            <div class="announcement-item">
-                <h2>Community share day</h2>
-                <p>Curabitur in enim at quam facilisis eleifend. Sed euismod, nisi vel consectetur interdum, nisl nisi….</p>
+            <div class="announcement">
+                <h1>Announcements</h1>
+                <div class="announcement-item">
+                    <h2>Site Management</h2>
+                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue….</p>
+                </div>
+                <div class="announcement-item">
+                    <h2>Community share day</h2>
+                    <p>Curabitur in enim at quam facilisis eleifend. Sed euismod, nisi vel consectetur interdum, nisl nisi….</p>
+                </div>
+                <div class="announcement-item">
+                    <h2>Updated Privacy Policy</h2>
+                    <p>Phasellus in ligula at enim facilisis eleifend. Sed euismod, nisi vel consectetur interdum, nisl nisi….</p>
+                </div>
             </div>
-            <div class="announcement-item">
-                <h2>Updated Privacy Policy</h2>
-                <p>Phasellus in ligula at enim facilisis eleifend. Sed euismod, nisi vel consectetur interdum, nisl nisi….</p>
+            <div class="trending">
+                <h1>Trending</h1>
+                <div class="trending-item">
+                    <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 1">
+                    <p>@binit</p>
+                    <p>World Peace Builder</p>
+                </div>
+                <div class="trending-item">
+                    <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 2">
+                    <p>@binit</p>
+                    <p>World Peace Builder</p>
+                </div>
+                <div class="trending-item">
+                    <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 3">
+                    <p>@binit</p>
+                    <p>World Peace Builder</p>
+                </div>
+                <div class="trending-item">
+                    <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 3">
+                    <p>@binit</p>
+                    <p>World Peace Builder</p>
+                </div>
             </div>
         </div>
-        <div class="trending">
-            <h1>Trending</h1>
-            <div class="trending-item">
-                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 1">
-                <p>@binit</p>
-                <p>World Peace Builder</p>
-            </div>
-            <div class="trending-item">
-                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 2">
-                <p>@binit</p>
-                <p>World Peace Builder</p>
-            </div>
-            <div class="trending-item">
-                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 3">
-                <p>@binit</p>
-                <p>World Peace Builder</p>
-            </div>
-            <div class="trending-item">
-                <img src="./assets/imgs/binit.jpg" height="50px" width="50px" alt="Trending 3">
-                <p>@binit</p>
-                <p>World Peace Builder</p>
-            </div>
     </div>
 </body>
 </html>
