--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -37,15 +37,15 @@
         <div class="dashboard">
             <h2>Dashboard</h2>
                 <ul>
-                    <li><img src="./assets/imgs/home.svg" alt="Home" width="24" height="24"> Home</li>
-                    <li><img src="./assets/imgs/account.svg" alt="Profile" width="24" height="24"> Profile</li>
-                    <li><img src="./assets/imgs/message-reply.svg" alt="Messages" width="24" height="24"> Messages</li>
-                    <li><img src="./assets/imgs/history.svg" alt="History" width="24" height="24"> History</li>
-                    <li><img src="./assets/imgs/calendar-check.svg" alt="Task" width="24" height="24"> Task</li>
-                    <li><img src="./assets/imgs/account-group-outline.svg" alt="Communities" width="24" height="24"> Communities</li>
-                    <li><img src="./assets/imgs/cog.svg" alt="Settings" width="24" height="24"> Settings</li>
-                    <li><img src="./assets/imgs/tooltip-question.svg" alt="Support" width="24" height="24"> Support</li>
-                    <li><img src="./assets/imgs/security.svg" alt="Privacy" width="24" height="24"> Privacy</li>
+                    <li><img src="./assets/imgs/home.svg" alt="Home" width="24" height="24"> <strong>Home</strong></li>
+                    <li><img src="./assets/imgs/account.svg" alt="Profile" width="24" height="24"> <strong>Profile</strong></li>
+                    <li><img src="./assets/imgs/message-reply.svg" alt="Messages" width="24" height="24"> <strong>Messages</strong></li>
+                    <li><img src="./assets/imgs/history.svg" alt="History" width="24" height="24"> <strong>History</strong></li>
+                    <li><img src="./assets/imgs/calendar-check.svg" alt="Task" width="24" height="24"> <strong>Task</strong></li>
+                    <li><img src="./assets/imgs/account-group-outline.svg" alt="Communities" width="24" height="24"> <strong>Communities</strong></li>
+                    <li><img src="./assets/imgs/cog.svg" alt="Settings" width="24" height="24"> <strong>Settings</strong></li>
+                    <li><img src="./assets/imgs/tooltip-question.svg" alt="Support" width="24" height="24"> <strong>Support</strong></li>
+                    <li><img src="./assets/imgs/security.svg" alt="Privacy" width="24" height="24"> <strong>Privacy</strong></li>
                 </ul>
         </div>
         <div class="main">
