--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css"
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h1>Tic Tac Toe</h1>
+        </div>
+        <div class="game-container">
+            <div class="cell-top-left" data-index="1"></div>
+            <div class="cell-top-mid" data-index="2"></div>
+            <div class="cell-top-right" data-index="3"></div>
+            <div class="cell-mid-left" data-index="4"></div>
+            <div class="cell-mid-mid" data-index="5"></div>
+            <div class="cell-mid-right" data-index="6"></div>
+            <div class="cell-bottom-left" data-index="7"></div>
+            <div class="cell-bottom-mid" data-index="8"></div>
+            <div class="cell-bottom-right" data-index="9"></div>
+        </div>
+    </div>
 </body>
 </html>
