--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -9,6 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <dialog closedby="any">
+        <form method="dialog">
+            <h2>Welcome Tic Tac Toe</h2>
+            <input type="checkbox" id="Human" name="Human" checked>
+            <label for="Human">Play with Human</label>
+            <input type="checkbox" id="Computer" name="Computer">
+            <label for="Computer">Play with Computer</label>
+            <button type="submit" class="start-game">Start Game</button>
+        </form>
+    </dialog>
     <div class="container">
         <div class="header">
             <h1>Tic Tac Toe</h1>
