--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <dialog closedby="any">
+    <dialog id="dialog" closedby="any">
         <form method="dialog">
             <h2>Welcome Tic Tac Toe</h2>
             <input type="checkbox" id="Human" name="Human" checked>
