--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <dialog id="dialog" closedby="any">
+    <dialog id="dialog">
         <form method="dialog" class="start-choice">
             <h2>Welcome to Tic Tac Toe</h2>
             <div class="radio-group">
