--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -24,9 +24,12 @@
         </form>
     </dialog>
     <div class="container">
+        
         <div class="header">
             <h1>Tic Tac Toe</h1>
         </div>
+        <div class = "vsHuman"></div>
+        <div class = "vsComputer"></div>
         <div class="game-container">
             <div class="cell-top-left" data-index="1"></div>
             <div class="cell-top-mid" data-index="2"></div>
