Restart dialog box pops

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -42,6 +42,12 @@
             <div class="cell-bottom-right" data-index="8"></div>
         </div>
     </div>
+    <dialog id="game-over-dialog">
+        <form method="dialog" class="game-over">
+            <h2 id="game-over-message"></h2>
+            <button type="submit" class="restart-game">Restart Game</button>
+        </form>
+    </dialog>
     <script src="script.js"></script>
 </body>
 </html>
